tests/compile_fail/state/superstates_type_defined.stderr
error: the `State::Superstates` associated type must not be manually defined
  --> tests/compile_fail/state/superstates_type_defined.rs:21:9
   |
21 |         type Superstates<'a> = std::marker::PhantomData<&'a ()>;
   |         ^^^^
